# share

./: .replit  app.py  models.py  pyproject.toml  replit.md  routes.py  utils.py
attached_assets/: Pasted-Here-s-a-precise-Replit-AI-prompt-to-create-a-Send-Anywhere-clone-prompt-Create-a-Flask-web--1751469918465_1751469918466.txt
instance/: sendanywhere.db
static/css/: styles.css
static/js/: app.js
templates/: index.html
