[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-limiter>=3.12",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "pycryptodome>=3.23.0",
    "apscheduler>=3.11.0",
    "werkzeug>=3.1.3",
    "crypto>=1.4.1",
    "qrcode[pil]>=8.2",
    "pillow>=11.3.0",
    "sqlalchemy>=2.0.41",
]
